fixed code wrapping

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,7 +97,9 @@ h6 {
 
 code,
 pre {
+  background-color: #f8f8f8;
   font-family: monospace;
+  white-space: nowrap;
 }
 
 q,
